--- a/SICP/SICP.csproj
+++ b/SICP/SICP.csproj
@@ -46,6 +46,9 @@
     <Reference Include="Bunifu.UI.WinForms.BunifuDropdown">
       <HintPath>C:\Users\silas\Downloads\BUNIFU TOOLS\BUNIFU TOOLS\Bunifu.UI.WinForms.BunifuDropdown.dll</HintPath>
     </Reference>
+    <Reference Include="Bunifu.UI.WinForms.BunifuGradientPanel">
+      <HintPath>C:\Users\silas\Downloads\BUNIFU TOOLS\BUNIFU TOOLS\Bunifu.UI.WinForms.BunifuGradientPanel.dll</HintPath>
+    </Reference>
     <Reference Include="Bunifu.UI.WinForms.BunifuGroupBox">
       <HintPath>C:\Users\silas\Downloads\BUNIFU TOOLS\BUNIFU TOOLS\Bunifu.UI.WinForms.BunifuGroupBox.dll</HintPath>
     </Reference>
@@ -54,6 +57,9 @@
     </Reference>
     <Reference Include="Bunifu.UI.WinForms.BunifuPanel">
       <HintPath>C:\Users\silas\Downloads\BUNIFU TOOLS\BUNIFU TOOLS\Bunifu.UI.WinForms.BunifuPanel.dll</HintPath>
+    </Reference>
+    <Reference Include="Bunifu.UI.WinForms.BunifuRadioButton">
+      <HintPath>C:\Users\silas\Downloads\BUNIFU TOOLS\BUNIFU TOOLS\Bunifu.UI.WinForms.BunifuRadioButton.dll</HintPath>
     </Reference>
     <Reference Include="Bunifu.UI.WinForms.BunifuSeparator">
       <HintPath>C:\Users\silas\Downloads\BUNIFU TOOLS\BUNIFU TOOLS\Bunifu.UI.WinForms.BunifuSeparator.dll</HintPath>
@@ -140,6 +146,12 @@
     <Compile Include="SubForms\FrmCimento.Designer.cs">
       <DependentUpon>FrmCimento.cs</DependentUpon>
     </Compile>
+    <Compile Include="SubForms\FrmProdutoSN.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="SubForms\FrmProdutoSN.Designer.cs">
+      <DependentUpon>FrmProdutoSN.cs</DependentUpon>
+    </Compile>
     <Compile Include="SubForms\FrmVendaCimento.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -165,6 +177,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="SubForms\FrmCimento.resx">
       <DependentUpon>FrmCimento.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="SubForms\FrmProdutoSN.resx">
+      <DependentUpon>FrmProdutoSN.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="SubForms\FrmVendaCimento.resx">
       <DependentUpon>FrmVendaCimento.cs</DependentUpon>
