Pasta DAO criada

--- a/SICP/SICP.csproj
+++ b/SICP/SICP.csproj
@@ -126,6 +126,12 @@
   <ItemGroup>
     <Compile Include="Controller\ControlFormPrincipal.cs" />
     <Compile Include="Dados\ConexaoDAO.cs" />
+    <Compile Include="Dados\MaterialDAO.cs" />
+    <Compile Include="Dados\VendasDAO.cs" />
+    <Compile Include="Entidades\enums\TipoMaterial.cs" />
+    <Compile Include="Entidades\Item.cs" />
+    <Compile Include="Entidades\MatConstrucao.cs" />
+    <Compile Include="Entidades\Venda.cs" />
     <Compile Include="FrmPrincipal.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -210,8 +216,6 @@
   <ItemGroup>
     <None Include="Resources\MINIMIZAR.png" />
   </ItemGroup>
-  <ItemGroup>
-    <Folder Include="Entidades\" />
-  </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
