--- a/SICP/SICP.csproj
+++ b/SICP/SICP.csproj
@@ -136,7 +136,6 @@
     <Compile Include="DomainsException.cs" />
     <Compile Include="Entidades\enums\TipoMaterial.cs" />
     <Compile Include="Entidades\Item.cs" />
-    <Compile Include="Entidades\MarcaCimento.cs" />
     <Compile Include="Entidades\MatConstrucao.cs" />
     <Compile Include="Entidades\Venda.cs" />
     <Compile Include="FrmPrincipal.cs">
@@ -147,6 +146,7 @@
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Services\VendaProcess.cs" />
     <Compile Include="SubForms\FrmCadCimento.cs">
       <SubType>Form</SubType>
     </Compile>
